--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
 }
 
 .container {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-radius: 50%;
+}
+
+.spinner {
     width: 500px;
     height: 500px;
     background-color: pink;
@@ -23,10 +28,10 @@ body {
     position: relative;
     overflow: hidden;
     transition: 5s;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.container div {
+
+.spinner div {
     height: 50%;
     width: 200px;
     position: absolute;
@@ -45,42 +50,42 @@ body {
 }
 
 
-.container .one{
+.spinner .one{
     background-color:#FFDFD3;
     left: 50%;
 }
 
-.container .two{
+.spinner .two{
     background-color: #E0BBE4;
     transform: rotate(45deg);
 }
 
-.container .three{
+.spinner .three{
     background-color: #957DAD;
     transform: rotate(90deg);
 }
 
-.container .four{
+.spinner .four{
     background-color: #D291BC;
     transform: rotate(135deg);
 }
 
-.container .five{
+.spinner .five{
     background-color: #FEC8D8;
     transform: rotate(180deg);
 }
 
-.container .six{
+.spinner .six{
     background-color: #FFDFD3;
     transform: rotate(225deg);
 }
 
-.container .seven{
+.spinner .seven{
     background-color: #E0BBE4;
     transform: rotate(270deg);
 }
 
-.container .eight{
+.spinner .eight{
     background-color: #957DAD;
     transform: rotate(315deg);
 }
@@ -99,7 +104,7 @@ body {
 
 
 
-#spin {
+#start {
     position: absolute;
     top: 50%;
     left: 50%;
