add effects for button

--- a/style.css
+++ b/style.css
@@ -123,3 +123,14 @@ body {
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+#start:hover {
+    background-color: #957DAD;
+    color: white;
+    transition: 0.5s;
+}
+
+#start:active {
+    box-shadow: none;
+    transform: translate(-50%, -30%);
+}
