--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 .user-input {
+    border: none;
     text-align: center; 
     background: transparent;
     font-family: 'Gluten', cursive;
@@ -35,6 +36,7 @@ body {
     border-radius: 10px;
     padding: 20px;
     font-size: 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
